feat: add project phase control
